2023-09-16T00:58:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6204274689 # 1197
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
* notice: last 14d: unq all: 2 22
* notice: prev accum: outdated-unq outdated-all / unq all: 484 825 / 502 852
* notice: next accum: outdated-unq outdated-all / unq all: 487 830 / 502 852
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-01] / []

2023-09-15T08:17:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6195638090 # 1195
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: last 14d: unq all: 2 23
* notice: prev accum: outdated-unq outdated-all / unq all: 477 815 / 499 849
* notice: next accum: outdated-unq outdated-all / unq all: 484 825 / 502 852
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -2 -4 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-08-27 2023-08-28 2023-08-29 2023-08-30 2023-08-31] / [2023-09-01 2023-09-11 2023-09-13 2023-09-15]

2023-09-09T16:18:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6131954729 # 1194
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-09
* notice: last 14d: unq all: 4 34
* notice: prev accum: outdated-unq outdated-all / unq all: 477 815 / 499 848
* notice: next accum: outdated-unq outdated-all / unq all: 477 815 / 499 849
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-09-09]

2023-09-09T08:17:31Z: