@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-03T16:17:59Z",
-  "count" : 2,
+  "timestamp" : "2023-09-17T01:03:06Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
