@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-09-16T00:58:26Z",
-  "count_outdated" : 830,
-  "uniques_outdated" : 487,
+  "timestamp" : "2023-09-17T01:03:06Z",
+  "count_outdated" : 832,
+  "uniques_outdated" : 488,
   "count" : 852,
   "uniques" : 502,
   "clones" : [
     {
-      "timestamp": "2023-09-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2023-09-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
