@@ -1,15 +1,10 @@
 {
-  "count": 22,
+  "count": 19,
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2023-09-02T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
